# zombie

./: .gitignore  ACTION-PLAN.md  AGENTS.md  Dockerfile  EXASPIM-PLAN.md  MOSAIC.md  MOUSELIGHT-PLAN.md  PLAN.md  README.md  VRF-PLAN.md  example_metadata.json  package-lock.json  pyproject.toml  temp.py  test_column_loader.py  test_fiber_viz.py  test_loader_debug.py  test_loader_fix.py  transfer_issues.sh
.github/workflows/: publish_dev.yml  tag_and_publish.yml  test_and_lint.yml
deploy/: nginx.conf  supervisord.conf
doc_template/source/: conf.py
scripts/: build_vrf_sprites.py  compute_ccf_centers.py  explore_logserver.py  inspect_qc_parquet.py
src/zombie/: 3d.py  app.py  assets.py  contributions.py  data.py  database.py  docdb.py  layout.py  metric.py  models.py  paths.py  plots.py  qc_app.py  qc_asset_app.py  qc_eval_panel.py  qc_portal.py  qc_portal_app.py  qc_test.py  s3.py  search.py  search_app.py  server_test.py  settings.py  streaming_app.py  subject.py  subject_data.py  utils.py
src/zombie/3dtest/: index.html  main.js
src/zombie/app_contents/: data_view.py  data_view_settings.py  data_view_utils.py  main_view.py  panel.py  space_view.py  time_view.py
testing/: nwb_fetch_speed.mjs
tests/: test_contributions.py  test_docdb.py  test_fiber_implant_parser.py  test_new_parsers.py
tests/resources/: 704242.json  813992.json  latex_output_example.txt  subject.json
web/: analysis-framework.html  assets.html  contributions.html  coordinate_system_builder.html  docdb_proxy.py  dynamic_foraging.html  dynamic_routing.html  exaspim.html  explore.html  fib_timing.py  fiber_photometry.html  index.html  migrate.html  names.html  package-lock.json  package.json  probe-transform-debug.html  project.html  quality_control.html  record.html  search.html  sessions.html  size.html  slap2.html  smartspim.html  star.html  subject.html  tables.html  upgrade.html  v2.html  view.html  vite.config.js  vr_foraging.html  vrf_play.html
web/contributions/: add.html  demo.html  edit.html  view.html
web/migrate/: review.html  submit.html
web/src/: analysis-framework-entry.js  app.js  assets-entry.js  constants.js  contributions-entry.js  data-view.js  dynamic_foraging-entry.js  dynamic_routing-entry.js  exaspim-entry.js  fiber_photometry-entry.js  metadata.js  migrate-entry.js  migrate-review-entry.js  migrate-submit-entry.js  names-entry.js  project-entry.js  qc-entry.js  record-entry.js  router.js  sessions-entry.js  settings.js  size-entry.js  slap2-entry.js  smartspim-entry.js  star-entry.js  subject-entry.js  tables-entry.js  time-view.js  upgrade-entry.js  v2-entry.js  vr_foraging-entry.js  vrf_play.js
web/src/assets/: view.js  (+2 more)
web/styles/: app.css
(+214 files in other folders)
