[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zombie"
description = "Zoomable observatory for mult-scale brain investigation and exploration"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'aind-data-schema',
    'aind-data-access-api[docdb]',
    'panel>=1.8.4',
    'aind-metadata-utils>=0.1.2,<2',
    'altair',
    'duckdb',
    'pyarrow',
    'hvplot',
    'holoviews',
    'zombie-squirrel>=0.7.4',
    'pandas==2.3.3',
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'furo',
    'watchfiles',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "zombie.__version__"}

[tool.black]
line-length = 120
target_version = ['py313']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*", "src/zombie/server_test.py"]
source = ["zombie", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 120
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
